tests/fixtures/invalid/bytes_floordiv_set.py
# Cannot floor divide Bytes and Set[int]
x: bytes = b"hello" // {1, 2, 3}
